--- a/ManagementTeamPage.html
+++ b/ManagementTeamPage.html
@@ -47,7 +47,7 @@
                 <br>
                 <img src="gordon ramsay.jpeg" alt="Gordon Ramsay" style="width:150px; height:auto; border-radius:50%; margin-left:10px;">
                 <br>
-                Visit my <a href="https://www.gordonramsay.com/">website</a>!
+                Visit my <a href="https://www.gordonramsay.com/" target="_blank">website</a>!
                 <br>
                 <br>
             </li>
@@ -95,4 +95,5 @@
     </footer>
 
 </body>
+
 </html>
