--- a/navigation.html
+++ b/navigation.html
@@ -10,8 +10,8 @@
         <br>
         <ul align="center">
             <li><a href="OurTeamPage.html" target="showframe">Our Team - Group 10</a></li> <br>
-            <li><a href="https://tkite6.github.io/Team10Project1/ManagementTeamPage" target="showframe">Company History</a></li> <br>
-            <li><a href="ManagementTeamPage.html" target="showframe">Management Team</a></li> <br>
+            <li><a href="insertGitHubLink" target="showframe">Company History</a></li> <br>
+            <li><a href="https://tkite6.github.io/Team10Project1/ManagementTeamPage" target="showframe">Management Team</a></li> <br>
             <li><a href="https://benheav.github.io/ProductPage.html" target="showframe">Our Products</a></li> <br>
             <li><a href="insertGitHubLink" target="showframe">Our Services</a></li> <br>
             <li><a href="insertGitHubLink" target="showframe">Customer Testimonials</a></li>
@@ -31,3 +31,4 @@
 </footer>
 
 </html>
+
