--- a/navigation.html
+++ b/navigation.html
@@ -10,7 +10,7 @@
         <br>
         <ul align="center">
             <li><a href="OurTeamPage.html" target="showframe">Our Team - Group 10</a></li> <br>
-            <li><a href="insertGitHubLink" target="showframe">Company History</a></li> <br>
+            <li><a href="https://github.com/llindali/linda.github.io" target="showframe">Company History</a></li> <br>
             <li><a href="https://tkite6.github.io/Team10Project1/ManagementTeamPage" target="showframe">Management Team</a></li> <br>
             <li><a href="https://benheav.github.io/ProductPage.html" target="showframe">Our Products</a></li> <br>
             <li><a href="insertGitHubLink" target="showframe">Our Services</a></li> <br>
@@ -31,4 +31,5 @@
 </footer>
 
 </html>
+
 
